--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -147,7 +147,7 @@ Open [this](https://redis.com/redis-enterprise/redis-insight/#insight-form) link
 
 ![My Image](images/image21.png)
 
-Fill out the rest of the form and click “Download.” Please note that the package is based on AppImage. The AppImage file is a compressed image which is temporarily mounted to allow access to the program, but not having to extract the program or modify the underlying system.
+Fill out the rest of the form and click “Download”. Please note that the package is based on AppImage. The AppImage file is a compressed image which is temporarily mounted to allow access to the program, but not having to extract the program or modify the underlying system.
 
 
 Package Name: RedisInsight-preview-linux.AppImage
