Adds day 3 stream time and changes case on hashtag.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -23,9 +23,9 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 
 |Date/Time             |Topic                                                    |Join Us!                                                          |
 |----------------------|---------------------------------------------------------|------------------------------------------------------------------|
-|Wed 1 Dec, 9am UTC    |Welcome to DEVcember, Get Started with Redis in the Cloud|<iframe src="https://www.youtube.com/embed/jf-lwkWUQHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Thu 2 Dec, 10.30am UTC|Up and Running with RedisInsight                         |<iframe src="https://www.youtube.com/embed/S-CXWP50ewM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Fri 3 Dec, Time: TBA  |A Beginner's Guide to Redis Lists                        | [Join us on Twitch](https://www.twitch.tv/redisinc)              |
+|Wed 1 Dec, 9am UTC      |Welcome to DEVcember, Get Started with Redis in the Cloud|<iframe src="https://www.youtube.com/embed/jf-lwkWUQHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Thu 2 Dec, 10.30am UTC. |Up and Running with RedisInsight                         |<iframe src="https://www.youtube.com/embed/S-CXWP50ewM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Fri 3 Dec, Time: 8pm UTC|A Beginner's Guide to Redis Lists                        | [Join us on Twitch](https://www.twitch.tv/redisinc)              |
 
 ## Meet the Team
 
@@ -51,7 +51,7 @@ We'll also feature guest appearances from other members of the Redis developer r
 
 Be sure to [follow us on Twitch](https://www.twitch.tv/redisinc) to be notified when we're online!  We'd also love to see you on the [Redis Discord](https://discord.gg/nrTwSyUvF2), where there's a dedicated channel for all things DEVcember.  This is where you can chat with us throughout the day and get help and information about the fun Redis commands / coding challenges we'll post for you to try on weekends.
 
-If you're on Twitter, use hashtag **#RedisDevcember** to join the conversation.
+If you're on Twitter, use hashtag **#RedisDEVcember** to join the conversation.
 
 ## Learn More
 
