--- a/docs/develop/java/spring/redis-om/index-redis-om-spring-json.mdx
+++ b/docs/develop/java/spring/redis-om/index-redis-om-spring-json.mdx
@@ -12,7 +12,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 ## Introduction
 
-The JSON format has become ubiquiouts as a data exchange format as well as a storage format,
+The JSON format has become ubiquitous as a data exchange format as well as a storage format,
 with many traditional relational databases now supporting JSON as a native format as well as
 a several document-oriented databases like CouchDB and MongoDB gaining in popularity. JSON as
 a dataformat eliminates the rigidity of relational database schemas, allow applications to
