--- a/docs/develop/java/spring/redis-om/index-redis-om-spring-json.mdx
+++ b/docs/develop/java/spring/redis-om/index-redis-om-spring-json.mdx
@@ -25,7 +25,7 @@ using Redis OM Spring.
 
 ## What You Will build
 
-You will build an application that stores `Company` POJOs (Plain Old Java Objects) a JSON documents in Redis.
+You will build an application that stores `Company` POJOs (Plain Old Java Objects) as JSON documents in Redis.
 
 ## What You need
 
