--- a/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
+++ b/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
@@ -46,7 +46,7 @@ Redis is especially positioned as a platform to implement rate limiting for seve
 
 Now, let’s get started with our first implementation; the simple [“Fixed Window” implementation](/develop/java/spring/rate-limiting/fixed-window).
 
-## Further Readings
+## Further Reading
 
 - [Getting Started with Spring Boot and Redis](/develop/java/redis-and-spring-course/)
 - [Introducing Spring Data Redis](/develop/java/redis-and-spring-course/lesson_2)
