--- a/docs/develop/java/spring/redis-om/index-redis-om-spring-json.mdx
+++ b/docs/develop/java/spring/redis-om/index-redis-om-spring-json.mdx
@@ -3,6 +3,7 @@ id: redis-om-spring-json
 title: Mapping Java Objects to JSON
 sidebar_label: Working with JSON
 slug: /develop/java/spring/redis-om/redis-om-spring-json
+authors: [bsb]
 ---
 
 import Tabs from '@theme/Tabs';
