--- a/docs/develop/java/spring/redis-om/index-redis-om-spring.mdx
+++ b/docs/develop/java/spring/redis-om/index-redis-om-spring.mdx
@@ -3,6 +3,7 @@ id: redis-om-spring
 title: Redis OM - Spring
 sidebar_label: Introduction
 slug: /develop/java/spring/redis-om/redis-om-spring
+authors: [bsb]
 ---
 
 import Tabs from '@theme/Tabs';
