--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -21,11 +21,11 @@ Don't worry if you miss a stream - we'll post them on [YouTube](https://www.yout
 
 We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [YouTube](https://www.youtube.com/c/Redisinc/videos) each working day in December… times will vary and we'll update the schedule below daily, revealing each day's topic as we go.
 
-|Date/Time             |Topic                                                    |Join Us!                                                          |
-|----------------------|---------------------------------------------------------|------------------------------------------------------------------|
+|Date/Time               |Topic                                                    |Join Us!                                                          |
+|------------------------|---------------------------------------------------------|------------------------------------------------------------------|
 |Wed 1 Dec, 9am UTC      |Welcome to DEVcember, Get Started with Redis in the Cloud|<iframe src="https://www.youtube.com/embed/jf-lwkWUQHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Thu 2 Dec, 10.30am UTC. |Up and Running with RedisInsight                         |<iframe src="https://www.youtube.com/embed/S-CXWP50ewM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Fri 3 Dec, Time: 8pm UTC|A Beginner's Guide to Redis Lists                        | [Join us on Twitch](https://www.twitch.tv/redisinc)              |
+|Thu 2 Dec, 10.30am UTC  |Up and Running with RedisInsight                         |<iframe src="https://www.youtube.com/embed/S-CXWP50ewM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Fri 3 Dec, Time: 8pm UTC|The Redis List goes on and on!                           |<iframe src="https://www.youtube.com/embed/OjoAmWOPk64" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 
 ## Meet the Team
 
