--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -253,7 +253,7 @@ To install RedisInsight on Windows, you need to first download the RedisInsight 
 
 Open [this](https://redis.com/redis-enterprise/redis-insight/#insight-form) link to open up a form that allows you to select the operating system of your choice.
 
-![My Image](images/image_3.png)
+![My Image](images/image_windows.png)
 
 ### Step 2.  Install RedisInsight
 
