adds title, URL to YT video, removes empty space

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -26,9 +26,9 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 |Wed 1 Dec, 9am UTC      |Welcome to DEVcember, Get Started with Redis in the Cloud|<iframe src="https://www.youtube.com/embed/jf-lwkWUQHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Thu 2 Dec, 10.30am UTC  |Up and Running with RedisInsight                         |<iframe src="https://www.youtube.com/embed/S-CXWP50ewM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Fri 3 Dec, 8pm UTC      |The Redis List goes on and on!                           |<iframe src="https://www.youtube.com/embed/OjoAmWOPk64" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Sat 4 / Sun 5 Dec       |First weekend hands-on exercise                          |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend1)                                                                                        |
-|Mon 6 Dec, 4:30pm UTC   |Let's try out Redis OM for Python                        |<iframe src="https://www.youtube.com/embed/gi6jugJsKS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                                                                                                                                            |
-|Tue 7 Dec, 5pm UTC      |TBD                                                      |[Follow us on Twitch...](https://twitch.tv/redisinc/)                                                                                                                                             |
+|Sat 4 / Sun 5 Dec       |First weekend hands-on exercise                          |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend1)|
+|Mon 6 Dec, 4:30pm UTC   |Let's try out Redis OM for Python                        |<iframe src="https://www.youtube.com/embed/gi6jugJsKS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Tue 7 Dec, 5pm UTC      |The Scoop on Big O Notation                              |<iframe src="https://www.youtube.com/embed/xSuZjetOhgs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 
 ## Meet the Team
 
