Added Browser tool

--- a/docs/explore/redisinsightv2/index-redisinsightv2.mdx
+++ b/docs/explore/redisinsightv2/index-redisinsightv2.mdx
@@ -25,6 +25,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
         />
   </div>
 
+ <div class="col">
+     <RedisCard
+        title="RedisInsight Browser Visualization Tutorial"
+        imgPath="redisinsight.png"
+        description="Visualize Redis database keys using the RedisInsight Browser Tool"
+        preview="redisinsight.png"
+        page="/explore/redisinsightv2/browser"
+        />
+ </div>
+
 
 </div>
 
