--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-browser
-title: Visualize Redis database keys using RedisInsight Browser Tool
+title: Visualize Redis Database keys using the RedisInsight Browser Tool
 sidebar_label: Visualize Redis database keys using RedisInsight Browser Tool 
 slug: /explore/redisinsightv2/browser
 authors: [ajeet]
