--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-browser
 title: Visualize Redis Database keys using the RedisInsight Browser Tool
-sidebar_label: Visualize Redis database keys using RedisInsight Browser Tool 
+sidebar_label: Visualize Redis Database keys using the RedisInsight Browser Tool 
 slug: /explore/redisinsightv2/browser
 authors: [ajeet]
 ---
