--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -19,7 +19,7 @@ RedisInsight is a 100% free Redis GUI that allows you to visualise, monitor, and
 
 ## What's New in the RedisInsight v2.0 Browser Tool?
 
-RedisInsight Browser lets you explore keys in your Redis server. You can add, edit and delete a key. You can even update the key expiry and copy the key name to be used in different places of the application. Below are the list of features available under the browser tool:
+RedisInsight Browser lets you explore keys in your Redis server. You can add, edit and delete a key. You can even update the key expiry and copy the key name to be used in different parts of the application. Below are the list of features available under the browser tool:
 
 - Browse, filter and visualize key-value Redis data structures
 - Visual cues per data type
