--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -30,7 +30,7 @@ RedisInsight Browser lets you explore keys in your Redis server. You can add, ed
 - Search within the data structure (except for Strings)
 - CRUD support for RedisJSON
 
-In order to understand the capabilities of the browser tool, let us take a simple example and demonstrate capabilities of each of browse tool options:
+In order to understand the capabilities of the browser tool, let us take a simple example and demonstrate each of the browser tool's options:
 
 ### Step 1. Download RedisInsight
 
