--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -111,7 +111,7 @@ The user hashes contain the following fields:
 
 ### Step 7: Cloning the repository
 
-Open up the CLI terminal and run the below command:
+Open up the CLI terminal and run the following command:
 
  ```bash
   git clone https://github.com/redis-developer/redis-datasets
