--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -107,7 +107,7 @@ The user hashes contain the following fields:
 *   `city` : City of the user.
 *   `longitude` : Longitude of the user.
 *   `latitude` : Latitude of the user.
-*   `last_login` : EPOC time of the last login.
+*   `last_login` : Epoch time of the last login.
 
 ### Step 7: Cloning the repository
 
