--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -127,7 +127,7 @@ Open up the CLI terminal and run the following command:
  ```
 
 
-Refresh the keys database by clicking as shown below:
+Refresh the keys view by clicking as shown below:
 
 
 ![alt_text](images/image_browser1.png "image_tooltip")
