--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -137,7 +137,7 @@ You can get a real-time view of the data in your Redis database as shown below:
 
 
 
-Select any key in the key database and the results gets displayed in the right hand side that includes Fields and values.
+Select any key in the keys view and the key's value gets displayed in the right hand side that includes Fields and values.
 
 
 
