--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -41,7 +41,7 @@ To use RedisInsight on a local Mac, you can download the software directly from 
 
 ![My Image](images/image1.png)
 
-Fill out the rest of the form and click “Download.” Please note that the package name is the combination of the platform and version as shown here: redisinsight-preview-platform-version
+Fill out the rest of the form and click “Download”. Please note that the package name is the combination of the platform and version as shown here: redisinsight-preview-platform-version
 
 ### Step 2. Install RedisInsight
 
