--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -65,7 +65,7 @@ Once clicked, it will redirect to [the link](https://redis.com/try-free/?utm_sou
 You can follow [this link](/create/rediscloud) to create a New Redis Enterprise Cloud database.
 In case you have an existing Redis database, follow the below steps.
 
-Assuming that you already have Redis database up and running locally, proceed to the next step to select "ADD REDIS DATABASE"
+Assuming that you already have Redis database up and running locally, proceed to the next step to select "ADD REDIS DATABASE".
 
 ### Step 4. Add Redis database
 
