--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -79,7 +79,7 @@ Once added, you will see the database added as shown below:
 
 ### Step 5: Open "Browser Tool"
 
-Click on "Key icon" on the left sidebar to open up the browser tool.
+Click on the "Key" icon on the left sidebar to open up the browser tool.
 
 ![alt_text](images/image_browser.png "image_tooltip")
 
