--- a/docs/explore/redisinsightv2/browser/index-browser.mdx
+++ b/docs/explore/redisinsightv2/browser/index-browser.mdx
@@ -86,7 +86,7 @@ Click on the "Key" icon on the left sidebar to open up the browser tool.
 
 ### Step 6: Importing keys
 
-Let us import a user database( 6k keys). This dataset contains users stored as Redis Hash.
+Let us import a user database (6k keys). This dataset contains users stored as Redis Hashes.
 
 
 ### 
