--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -29,7 +29,7 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 |Sat 4 / Sun 5 Dec       |First weekend hands-on exercise                          |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend1)|
 |Mon 6 Dec, 4:30pm UTC   |Let's try out Redis OM for Python                        |<iframe src="https://www.youtube.com/embed/gi6jugJsKS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Tue 7 Dec, 5pm UTC      |The Scoop on Big O Notation                              |<iframe src="https://www.youtube.com/embed/xSuZjetOhgs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Wed 8 Dec, 4:30pm UTC   |Get! Set! Go!                                            |[Follow us on Twitch...](https://twitch.tv/redisinc)                                                                                                                                              |
+|Wed 8 Dec, 4:30pm UTC   |Get! Set! Go!                                            |<iframe src="https://www.youtube.com/embed/e1wD52EAiQw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Thu 9 Dec, 10am UTC     |TBD                                                      |[Follow us on Twitch...](https://twitch.tv/redisinc)                                                                                                                                              |
 
 ## Meet the Team
