Adds Day 7 topic/embed.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -30,7 +30,8 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 |Mon 6 Dec, 4:30pm UTC   |Let's try out Redis OM for Python                        |<iframe src="https://www.youtube.com/embed/gi6jugJsKS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Tue 7 Dec, 5pm UTC      |The Scoop on Big O Notation                              |<iframe src="https://www.youtube.com/embed/xSuZjetOhgs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Wed 8 Dec, 4:30pm UTC   |Get! Set! Go!                                            |<iframe src="https://www.youtube.com/embed/e1wD52EAiQw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Thu 9 Dec, 10am UTC     |TBD                                                      |[Follow us on Twitch...](https://twitch.tv/redisinc)                                                                                                                                              |
+|Thu 9 Dec, 10am UTC     |Have I Seen You Before? Introducing Bloom Filters        |<iframe src="https://www.youtube.com/embed/qgJRoWBmEoQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Fri 10 Dec, 6pm UTC     |TBD                                                      |[Follow us on Twitch...](https://twitch.tv/redisinc)                                                                                                                                              |
 
 ## Meet the Team
 
