Sets up Day 8 DEVcember Hyperloglog.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -31,7 +31,8 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 |Tue 7 Dec, 5pm UTC      |The Scoop on Big O Notation                              |<iframe src="https://www.youtube.com/embed/xSuZjetOhgs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Wed 8 Dec, 4:30pm UTC   |Get! Set! Go!                                            |<iframe src="https://www.youtube.com/embed/e1wD52EAiQw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Thu 9 Dec, 10:30am UTC  |Have I Seen You Before? Introducing Bloom Filters        |<iframe src="https://www.youtube.com/embed/qgJRoWBmEoQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-|Fri 10 Dec, 6pm UTC     |TBD                                                      |[Follow us on Twitch...](https://twitch.tv/redisinc)                                                                                                                                              |
+|Fri 10 Dec, 6pm UTC     |You Can (Mostly) Count on Hyperloglog!                   |<iframe src="https://www.youtube.com/embed/pUpSnaqpcks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Sat 11 / Sun 12 Dec     |Second weekend hands-on exercise                         |Coming soon!                                                                                                                                                                                      |
 
 ## Meet the Team
 
