Added Kubernetes blog

--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -79,7 +79,7 @@ The following links provides you with the available options to create a new Redi
      <RedisCard
         title="Redis on Kubernetes"
         imgPath="recloud.png"
-        description="Create Redis database on Google Kubernetes Engine"
+        description="Create Redis database on Kubernetes Platform"
         preview="recloud.png"
         page="/create/kubernetes"
         />
