Added new tutorial on K8s Operator

--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -23,8 +23,8 @@ The following links provides you with the available options to create a new Redi
  </div>
  <div class="col">
      <RedisCard
-        title="What is a Kubernetes Operator"
-        description="Learn about Kubernetes Operator and its benefit in Application Management"
+        title="Kubernetes Operator: What It Is and Why You Should Really Care About It?"
+        description="Learn about Kubernetes Operator and its benefits"
         page="/create/kubernetes/kubernetes-operator"
         />
  </div>
