--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-kubernetes-operator
-title: 'What is a Kubernetes Operator?'
-sidebar_label: 'What is a Kubernetes Operator?'
+title: 'Kubernetes Operator: What It Is and Why You Should Really Care About It?'
+sidebar_label: 'Kubernetes Operator: What It Is and Why You Should Really Care About It?'
 slug: /create/kubernetes/kubernetes-operator
 authors: [ajeet]
 ---
@@ -12,13 +12,15 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 ![My Image](images/image1.png)
 
-Kubernetes is popular due to its capability to deploy new apps at a faster pace. Thanks to “Infrastructure as data '' (specifically, YAML), today you can express all your Kubernetes  resources such as Pods, Deployments, Services, Volumes, etc., in a YAML file. These default objects make it much easier for DevOps and SRE engineers to fully express their workloads without the need to learn how to write code in a programming language like Python, Java, or Ruby. 
+[Kubernetes](https://kubernetes.io/) is popular due to its capability to deploy new apps at a faster pace. Thanks to “Infrastructure as data '' (specifically, YAML), today you can express all your Kubernetes  resources such as [Pods](https://kubernetes.io/docs/concepts/workloads/pods/), [Deployments](https://kubernetes.io/docs/concepts/workloads/controllers/deployment/), [Services](https://kubernetes.io/docs/concepts/services-networking/service/), [Volumes](https://kubernetes.io/docs/concepts/storage/volumes/), etc., in a YAML file. These default objects make it much easier for DevOps and SRE engineers to fully express their workloads without the need to learn how to write code in a programming language like Python, Java, or Ruby. 
 
 Kubernetes is designed for automation. Out of the box, you get lots of built-in automation from the core of Kubernetes. It can speed up your development process by making easy, automated deployments, updates (rolling update), and by managing your apps and services with almost zero downtime. However,  Kubernetes can’t automate the process natively for stateful application. For example, say you have a stateful workload, such as a database application, running on several nodes. If a majority of nodes go down, you’ll need to reload the database from a specific snapshot following specific steps. Using existing default objects, types, and controllers in Kubernetes, this would be impossible to achieve. 
 
 Think of scaling nodes up, or upgrading to a new version, or disaster recovery for your stateful application—these kinds of operations often need very specific steps, and typically require manual intervention. Kubernetes cannot know all about every stateful, complex, clustered application. Kubernetes, on its own, does not know the configuration values for, say, a Redis database cluster, with its arranged memberships and stateful, persistent storage. Additionally, scaling stateful applications in Kubernetes is not an easy task and requires manual intervention.
 
-Let’s try to understand the difference between stateful versus stateless application with a simple example. Consider a Kubernetes cluster running a simple web application (without any operator). The YAML file below allows you to create two replicas of NGINX (a stateless application).
+### Stateful Vs Stateless Application
+
+Let’s try to understand the difference between [stateful](https://kubernetes.io/docs/tutorials/stateful-application/)  versus [stateless](https://kubernetes.io/docs/tutorials/stateless-application/) application with a simple example. Consider a Kubernetes cluster running a simple web application (without any operator). The YAML file below allows you to create two replicas of NGINX (a stateless application).
 
 
 ```
@@ -48,7 +50,7 @@ Let’s try to understand the difference between stateful versus stateless appli
 
 In the example above, a Deployment object named nginx-deployment is created under a namespace “web,” indicated by the .metadata.name field. It creates two replicated Pods, indicated by the .spec.replicas field. The .spec.selector field defines how the Deployment finds which Pods to manage. In this case, you select a label that is defined in the Pod template (app: nginx). The template field contains the following subfields: the Pods are labeled app: nginx using the .metadata.labels field and the Pod template's specification indicates that the Pods run one container, nginx, which runs the nginx Docker Hub image at version 1.14.2. Finally, it creates one container and names it nginx.
 
-Run the below command to create the Deployment:
+Run the below command to create the Deployment resource:
 
 
 ```
@@ -57,7 +59,6 @@ kubectl create -f nginx-dep.yaml
 
 
 
-![alt_text](images/image2.png "image_tooltip")
 
 
 
@@ -74,6 +75,8 @@ Let us verify if the Deployment was created successfully by running the followin
 
 
 The example above shows the name of the Deployment in the namespace. It also displays how many replicas of the application are available to your users. You can also see that the number of desired replicas that have been updated to achieve the desired state is 2. 
+
+![alt_text](images/image2.png "image_tooltip")
 
 You can run the “kubectl describe” command to get detailed information of deployment resources. Show details of a specific resource or group of resources
 
@@ -243,7 +246,7 @@ spec:
 ```
 
 
-Kubernetes makes physical storage devices available to your cluster in the form of objects called Persistent Volumes. Each of these Persistent Volumes is consumed by a Kubernetes Pod by issuing a PersistentVolumeClaim object, also known as PVC. A PVC object lets Pods use storage from Persistent Volumes. Imagine a scenario in which we want to downscale a cluster from 5 Nodes to 3 Nodes. Suddenly removing 2 Nodes at once is a potentially destructive operation. This might lead to the loss of all copies of the data. A better way to handle Node removal would be to first migrate data from the Node to be removed to other Nodes in the system before performing the actual Pod deletion. It is important to note that the StatefulSet controller is necessarily generic and cannot possibly know about every possible way to manage data migration and replication. In practice, however, StatefulSets are rarely enough to handle complex, distributed stateful workload systems in production environments. 
+Kubernetes makes physical storage devices available to your cluster in the form of objects called [Persistent Volumes](https://kubernetes.io/docs/concepts/storage/persistent-volumes/). Each of these Persistent Volumes is consumed by a Kubernetes Pod by issuing a [PersistentVolumeClaim](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#claims-as-volumes) object, also known as PVC. A PVC object lets Pods use storage from Persistent Volumes. Imagine a scenario in which we want to downscale a cluster from 5 Nodes to 3 Nodes. Suddenly removing 2 Nodes at once is a potentially destructive operation. This might lead to the loss of all copies of the data. A better way to handle Node removal would be to first migrate data from the Node to be removed to other Nodes in the system before performing the actual Pod deletion. It is important to note that the StatefulSet controller is necessarily generic and cannot possibly know about every possible way to manage data migration and replication. In practice, however, StatefulSets are rarely enough to handle complex, distributed stateful workload systems in production environments. 
 
 **Now the question is, how to solve this problem? **Enter Operators. Operators were developed to handle the sophisticated, stateful applications that the default Kubernetes controllers aren’t able to handle. While Kubernetes controllers like [StatefulSets](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/) are ideal for deploying, maintaining, and scaling simple stateless applications, they are not equipped to handle access to stateful resources, or to upgrade, resize, and backup of more elaborate clustered applications such as databases. A Kubernetes Operator fills in the gaps between the capabilities and automation provided by Kubernetes and how your software uses Kubernetes for automation of tasks relevant to your software.
 
@@ -251,8 +254,9 @@ An Operator is basically an application-specific controller that can help you ma
 
 ### Functions of Kubernetes Operator
 
-A Kubernetes Operator uses the Kubernetes API to create, configure, and manage instances of complex stateful applications on behalf of a Kubernetes user. There is a public repository called OperatorHub.io that is designed to be the public registry for finding Kubernetes Operator backend services. With Operator Hub, developers can easily create an application based on an operator without going through the complexity of crafting an operator from scratch.
+A Kubernetes Operator uses the Kubernetes API to create, configure, and manage instances of complex stateful applications on behalf of a Kubernetes user. There is a public repository called [OperatorHub.io](https://operatorhub.io) that is designed to be the public registry for finding Kubernetes Operator backend services. With Operator Hub, developers can easily create an application based on an operator without going through the complexity of crafting an operator from scratch.
 
+![alt_text](images/image6.png "image_tooltip")
 
 Below are a few examples of popular Kubernetes Operators and their functions and capabilities.
 
@@ -260,35 +264,30 @@ Below are a few examples of popular Kubernetes Operators and their functions and
 
 
 
-* Helps you deploy an application on demand (for example, [Argo CD operator (Helm](https://operatorhub.io/operator/argocd-operator-helm)_) _is a declarative, GitOps continuous delivery tool for Kubernetes that helps with easy installation and configuration on demand)
+* Helps you deploy an application on demand (for example, [Argo CD operator (Helm](https://operatorhub.io/operator/argocd-operator-helm) is a declarative, GitOps continuous delivery tool for Kubernetes that helps with easy installation and configuration on demand)
 * Helps you install applications with the required configurations and number of application instances
-* Allows you to take and restore backups of the application state (for example, _[Velero operator ](https://github.com/vmware-tanzu/velero)_manages disaster recovery, backup, and restoration of cluster components such as pv, pvc, deployments, etc., to aid in disaster recovery)
-* IHandles the upgrades of the application code plus the changes, such as database schema (for example, _[Flux ](https://fluxcd.io/)_is a continuous delivery solution for Kubernetes that allows automating updates to configuration when there is new code to deploy)
+* Allows you to take and restore backups of the application state (for example, [Velero operator ](https://github.com/vmware-tanzu/velero) manages disaster recovery, backup, and restoration of cluster components such as pv, pvc, deployments, etc., to aid in disaster recovery)
+* IHandles the upgrades of the application code plus the changes, such as database schema (for example, [Flux ](https://fluxcd.io/) is a continuous delivery solution for Kubernetes that allows automating updates to configuration when there is new code to deploy)
 * Can manage a cluster of database servers (for example, [MariaDB operator](https://operatorhub.io/operator/mariadb-operator-app) creates MariaDB server and database easily by defining simple custom resource)
 * Can install a database cluster of a declared software version and number of members
 * Scale applications in or out
-* Continues to monitor its application as it runs (for example, _[Prometheus Operator ](https://operatorhub.io/operator/prometheus)_simplifies the deployment and configuration of Prometheus, Alertmanager, and related monitoring components)
+* Continues to monitor its application as it runs (for example, [Prometheus Operator ](https://operatorhub.io/operator/prometheus) simplifies the deployment and configuration of Prometheus, Alertmanager, and related monitoring components)
 * Initiate upgrades, automated backups, and failure recovery, simulating failure in all or part of your cluster to test its resilience
 * Allows you to publish a service to the applications that don’t support Kubernetes APIs to discover them
 
 ### How does Operator work?
 
 
-
-
-![alt_text](images/image6.png "image_tooltip")
-
-
-
-
-
 Operators work by extending the Kubernetes control plane and API. Operators allows you to define a Custom Controller that watches your application and performs custom tasks based on its state. The application you want to watch is usually defined in Kubernetes as a new object: a [Custom Resource](https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/) (CR) that has its own YAML spec and object type that is well understood by the API server. That way, you can define any specific criteria in the custom spec to watch out for, and reconcile the instance when it doesn’t match the spec. The way an Operator’s controller reconciles against a spec is very similar to native Kubernetes controllers, though it is using mostly custom components.
 
 ### What is Redis Enterprise Operator?
 
-Redis has created an Operator that deploys and manages the life cycle of a Redis Enterprise Cluster. The Redis Enterprise Operator is the fastest, most efficient way to deploy and maintain a Redis Enterprise cluster in Kubernetes. The Operator creates, configures, and manages Redis Enterprise deployments from a single Kubernetes control plane. This means that you can manage Redis Enterprise instances on Kubernetes just by creating native objects, such as a Deployment, ReplicaSet, StatefulSet, etc. Operators allow full control over the Redis Enterprise cluster lifecycle.
+<iframe width="760" height="415" src="https://www.youtube.com/embed/VjQZScpBj-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-The Redis Enterprise Operator acts as a custom controller for the custom resource Redis Enterprise cluster, or “REC”, which is defined through Kubernetes CRD ([customer resource definition](https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/#custom-resources)) and deployed with a YAML file.The Redis Enterprise Operator functions as the logic “glue” between the Kubernetes infrastructure and the Redis Enterprise cluster.
+
+Redis has created an [Operator](https://docs.redis.com/6.0/platforms/kubernetes/concepts/operator/) that deploys and manages the life cycle of a Redis Enterprise Cluster. [The Redis Enterprise Operator](https://operatorhub.io/operator/redis-enterprise) is the fastest, most efficient way to deploy and maintain a Redis Enterprise cluster in Kubernetes. The Operator creates, configures, and manages Redis Enterprise deployments from a single Kubernetes control plane. This means that you can manage Redis Enterprise instances on Kubernetes just by creating native objects, such as a Deployment, ReplicaSet, StatefulSet, etc. Operators allow full control over the Redis Enterprise cluster lifecycle.
+
+The Redis Enterprise Operator acts as a [custom controller](https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/#custom-controllers) for the custom resource Redis Enterprise cluster, or “REC”, which is defined through Kubernetes CRD ([customer resource definition](https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/#custom-resources)) and deployed with a YAML file.The Redis Enterprise Operator functions as the logic “glue” between the Kubernetes infrastructure and the Redis Enterprise cluster.
 
 ### How does Redis Enterprise Operator work?
 
@@ -372,7 +371,7 @@ spec:
 
 In the next tutorial, you will learn how to get started with Redis Enterprise Kubernetes Operator from scratch, including how to perform non-trivial tasks such as backup, restore, horizontal scaling, and much more. Stay tuned!
 
-### References:
+### References
 
 
 
