--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -9,7 +9,7 @@ slug: /create/kubernetes/
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-The following links provides you with the available options to create a new Redis database on Kubernetes Platforms 
+The following links provide you with the available options to create a new Redis database on Kubernetes Platforms 
 
 
 <div class="row">
