--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-kubernetes-gke
-title: Create Redis database on Google Kubernetes Engine
+title: Create a Redis database on Google Kubernetes Engine
 sidebar_label: Redis on Kubernetes
 slug: /create/kubernetes/kubernetes-gke
 authors: [ajeet]
