--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -297,7 +297,7 @@ The Redis Enterprise Operator acts as a [custom controller](https://kubernetes.i
 
 
 
-Redis Enterprise Operator support two Custom Resource Definitions (CRDs):
+The Redis Enterprise Operator supports two Custom Resource Definitions (CRDs):
 
 
 
