--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -289,7 +289,7 @@ Redis has created an [Operator](https://docs.redis.com/6.0/platforms/kubernetes/
 
 The Redis Enterprise Operator acts as a [custom controller](https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/#custom-controllers) for the custom resource Redis Enterprise Cluster, or “REC”, which is defined through Kubernetes CRD ([customer resource definition](https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/#custom-resources)) and deployed with a YAML file.The Redis Enterprise Operator functions as the logic “glue” between the Kubernetes infrastructure and the Redis Enterprise cluster.
 
-### How does Redis Enterprise Operator work?
+### How does the Redis Enterprise Operator work?
 
 
 ![alt_text](images/image7.png "image_tooltip")
