--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -17,7 +17,7 @@ The following links provide you with the available options to create a new Redis
  <div class="col">
      <RedisCard 
         title="Redis on Kubernetes" 
-        description="Create Redis database on Google Kubernetes Engine" 
+        description="Create a Redis database on Google Kubernetes Engine" 
         page="/create/kubernetes/kubernetes-gke"
         />
  </div>
