--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -19,7 +19,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 - curl, git, kubectl packages installed
 - A Google Cloud account with Kubernetes Engine Admin role.
 - Install the latest cloud SDK from [Installing the latest Cloud SDK version (313.0.1)](https://cloud.google.com/sdk/docs/quickstart#installing_the_latest_version)
-- Initializing the cloud SDK by [gcloud init](https://cloud.google.com/sdk/docs/quickstart#initializing_the) link
+- Initializing the cloud SDK with [gcloud init](https://cloud.google.com/sdk/docs/quickstart#initializing_the) link
 
 
 ### Step 2. Ensure that gcloud is installed on your local Linux system:
