--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -58,7 +58,7 @@ Context "kubernetes-admin@kubernetes" modified.
 
 ### Step 6. Deploy the operator bundle
 
-To deploy the default installation with kubectl, the following command will deploy a bundle of all the yaml declarations required for the operator. You can download the bndle YAML file via [this](https://raw.githubusercontent.com/RedisLabs/redis-enterprise-k8s-docs/master/bundle.yaml) link: 
+To deploy the default installation with kubectl, the following command will deploy a bundle of all the YAML declarations required for the operator. You can download the bundle YAML file via [this](https://raw.githubusercontent.com/RedisLabs/redis-enterprise-k8s-docs/master/bundle.yaml) link: 
 
 
 
