--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -72,7 +72,7 @@ deployment.apps/redis-enterprise-operator created
 customresourcedefinition.apiextensions.k8s.io/redisenterprisedatabases.app.redislabs.com created
 ```
 
-### Step 7. Listing the deployment:
+### Step 7. Verifying the Deployment:
 
 Run the below command to verify redis-enterprise-operator deployment is running.
 
