--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -74,7 +74,7 @@ customresourcedefinition.apiextensions.k8s.io/redisenterprisedatabases.app.redis
 
 ### Step 7. Verifying the Deployment:
 
-Run the below command to verify redis-enterprise-operator deployment is running.
+Run the command below to verify redis-enterprise-operator deployment is running.
 
 
 ```
