--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -94,7 +94,7 @@ redisenterprisecluster.app.redislabs.com/redis-enterprise created
 ```
 
 
-### Step 9. Listing the RedisEnterpriseCluster
+### Step 9. Verifying the Redis Enterprise Cluster
 
 The rec is a shortcut for RedisEnterpriseCluster. The cluster takes around 5-10 minutes to come up.Run the below command to list the RedisEnterpriseCluster: 
 
