--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -96,7 +96,7 @@ redisenterprisecluster.app.redislabs.com/redis-enterprise created
 
 ### Step 9. Verifying the Redis Enterprise Cluster
 
-The rec is a shortcut for RedisEnterpriseCluster. The cluster takes around 5-10 minutes to come up.Run the below command to list the RedisEnterpriseCluster: 
+The rec is a shortcut for RedisEnterpriseCluster. The cluster takes around 5-10 minutes to come up. Run the command below to check that the RedisEnterpriseCluster is up: 
 
 ```
 $ kubectl get rec
