--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -105,7 +105,7 @@ redis-enterprise   14s
 [node1 redis-enterprise-k8s-docs]$
 ```
 
-### Step 10. Listing kubernetes resources
+### Step 10. Listing Kubernetes Resources
 
 
 
